NXP-33537: Make possible to leverage Nuxeo sequencer for SQL Audit implementation