@@ -59,12 +59,7 @@ public class SQLAuditBackend extends AbstractAuditBackend {
 
     @Override
     public void insertLogs(Collection<LogEntry> entries) {
-        backend.addLogEntries(entries.stream()
-                                     // clear id and log date, this backend won't have full multi backend support
-                                     .map(entry -> entry.builder().id(null).logDate(null).build())
-                                     // map to deprecated LogEntry implementation
-                                     .map(TO_LOG_ENTRY_SQL_MAPPER)
-                                     .collect(Collectors.toList()));
+        backend.insertLogs(entries.stream().map(TO_LOG_ENTRY_SQL_MAPPER).toList());
     }
 
     @Override
